# slpopt

./: Cargo.toml  README.md  config.toml
src/: api.rs  config.rs  main.rs  tray.rs
