[package]
name = "slpopt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
input = "0.9"
libc = "0.2.154"
reqwest = { version = "0.12.4", features = ["json"] }
md-5 = "0.10.6"
tokio = { version = "1.37.0", features = ["full"] }
rand = "0.8.5"
serde_json = "1.0.117"
toml = "0.8.13"
serde = { version = "1.0.203", features = ["derive"] }
selection = "1.2"
gtk = { version = "0.8.2", package = "gtk4" }
async-channel = "2.3.1"